fixed wrong spacing when not full row, fixed footer alignment

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -1761,24 +1761,19 @@ hr.option-result-divider {
 	padding-bottom: 0;
   }
 
-  .row > div{
-	padding-left: 5px;
-	padding-right: 5px;
-  }
-
-  .row > div:first-child{
+  .row > div:nth-child(1) {
 	padding-left: 15px;
 	padding-right: 5px;
   }
 
-  .row > div:last-child{
+  .row > div:nth-child(2) {
+	padding-left: 5px;
+	padding-right: 5px;
+  }
+
+  .row > div:nth-child(3) {
 	padding-right: 15px;
 	padding-left: 5px;
-  }
-
-  .row > div:only-child{
-	padding-left: 15px;
-	padding-right: 5px;
   }
 
 }
